[package]
name = "typingTD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy= { version = "0.13.2",  default-features = false, features = ["animation", "bevy_animation", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "hdr", "multi-threaded", "png", "serialize", "subpixel_glyph_atlas", "wayland", "x11", "webgl2"] }
bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
bevy-inspector-egui = "0.24.0"
# required for wasm
web-sys = "0.3.69"
rand = "0.8.5"
serde = "1.0.202"
bevy_common_assets = { version = "0.10.0", features = ["json"] }
strum = { version = "0.26.2", features = ["derive"] }
default-constructor = "0.2.1"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
