cargo-features = ["codegen-backend"]
[package]
name = "typingTD"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
  "animation",
  "bevy_animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "hdr",
  "png",
  "serialize",
  "wayland",
  "vorbis",
  "bevy_state",
  "multi_threaded",
  "debug_glam_assert",
  "webgpu",
] }
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy-inspector-egui = "0.25.0"
bevy_device_lang = "0.4.0"
# required for wasm
web-sys = { version = "0.3.69", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
] }
rand = "0.8.5"
serde = "1.0.203"
bevy_common_assets = { version = "0.11.0", features = ["json"] }
strum = { version = "0.26.3", features = ["derive"] }
default-constructor = "0.3.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = "0.1.43"

[profile.dev.package."*"]
opt-level = 3

[profile.fast_compile]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
codegen-backend = "cranelift"

[profile.fast_compile_no_cranelift]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[profile.fast_runtime]
inherits = "release"
opt-level = 3
debug = false
lto = true
codegen-units = 1
incremental = false
panic = "abort"
strip = true
